syntax = "proto3";

package api.proj;

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/any.proto";
import "public/response/response.proto";
import "validate/validate.proto";
import "proj/task.proto";
import "proj/user.proto";
import "proj/credit.proto";
import "proj/account.proto";
import "proj/session.proto";

option go_package = "store/api/proj;projpb";

service SessionService {

  rpc CreateSession(CreateSessionRequest) returns (api.proj.Session) {
    option (google.api.http) = {
      post: "/api/proj/v1/sessions"
      body: "*"
    };
  }
  rpc CreateSessionV2(CreateSessionV2Request) returns (api.proj.Session) {
    option (google.api.http) = {
      post: "/api/proj/v2/sessions"
      body: "*"
    };
  }

  rpc GetSession(GetSessionRequest) returns (api.proj.Session) {
    option (google.api.http) = {
      get: "/api/proj/v1/sessions/{id}"
    };
  }

  rpc ListSessions(ListSessionsRequest) returns (api.proj.SessionList) {
    option (google.api.http) = {
      get: "/api/proj/v1/sessions"
    };
  }

  rpc UpdateSession(UpdateSessionRequest) returns (api.proj.Session) {
    option (google.api.http) = {
      patch: "/api/proj/v1/sessions/{id}"
      body: "*"
    };
  }

  rpc UpdateSessionSegment(UpdateSessionSegmentRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      patch: "/api/proj/v1/session-segments/{id}"
      body: "*"
    };
  }
}

message UpdateSessionRequest{
  string id = 1;
  string action = 2;
  map<string, string> params = 3;
}

message UpdateSessionSegmentRequest{
  string id = 1;
  string action = 2;
  map<string, string> params = 3;
}

message GetSessionRequest {
  string id = 1;
}

message ListSessionsRequest {
  int64 page = 1;
}

message CreateSessionRequest {
  string commodityId = 1;
}

message CreateSessionV2Request {
  string templateId = 1;
  string commodityId = 2;
  int64 targetChance = 3;
}

